@@ -86,7 +86,7 @@ gchar          *na_selected_info_get_uri       ( const NASelectedInfo *nsi );
 gchar          *na_selected_info_get_uri_scheme( const NASelectedInfo *nsi );
 gboolean        na_selected_info_is_directory  ( const NASelectedInfo *nsi );
 
-NASelectedInfo *na_selected_info_create_for_uri( const gchar *uri );
+NASelectedInfo *na_selected_info_create_for_uri( const gchar *uri, const gchar *mimetype );
 
 G_END_DECLS
 
